--- a/quiz-game-js/styles.css
+++ b/quiz-game-js/styles.css
@@ -12,6 +12,7 @@ body{
     padding: 10px 30px;
     border-radius: 5px;
     font-weight: 500;
+    display: block;
     margin: auto auto;
     outline: none;
     box-shadow: 10px 10px 41px 0px rgba(0,0,0,0.75);
